tests/NormalTests/paczka1/fuzzy1/81984894.err
Error in line 10: 2SKREd7A0T S320 31,0
Error in line 11: UMgGnL S320 46,0
Error in line 6: NUzAW A841 14,6
Error in line 12: 2SKREd7A0T S191 52,9
Error in line 16: ckyFEMEqCy A841 25,1
Error in line 26: S320 S191 198,2
